subprojects/swen430/src/test/resources/tests/valid/StringAssign_Valid_2.while
void main() {
    string foo = "hello";
    foo[0] = 'z';
    foo[1] = 'e';
    foo[2] = 'b';
    print foo;
}

