subprojects/swen430/src/test/resources/tests/invalid/StringAssign_Invalid_3.while
void main() {
    string foo = "hello";
    foo[-1] = 'z';
    print foo;
}

